--- a/Pagina1.html
+++ b/Pagina1.html
@@ -22,10 +22,10 @@
 
                 <ul class="nav-links">
                     <li class="item-menu-header">
-                        <a href="">Sobre Nos</a>
+                        <a href="Pagina2.html">Sobre Nos</a>
                     </li>
                     <li class="item-menu-header">
-                        <a href="">Deixe seu Feedback</a>
+                        <a href="Pagina3.html">Deixe seu Feedback</a>
                     </li>
                 </ul>
 
